make article entity and article controller consistent